add options to filter patient queue by visit_type

--- a/ocemr/templates/patient_queue.html
+++ b/ocemr/templates/patient_queue.html
@@ -15,6 +15,13 @@
 {% endblock %}
 
 {% block content %}
+<DIV ID=extraHeader>
+Filter by visit type:
+{% ifnotequal filter_visit_type None %}<A HREF=/patient_queue/>All</A>{%else%}ALL{%endifnotequal%} /
+{% ifnotequal filter_visit_type "OUT" %}<A HREF=/patient_queue/?filter_visit_type=OUT>Outpatient</A>{%else%}Outpatient{%endifnotequal%} /
+{% ifnotequal filter_visit_type "IN" %}<A HREF=/patient_queue/?filter_visit_type=IN>Inpatient</A>{%else%}Inpatient{%endifnotequal%} /
+{% ifnotequal filter_visit_type "MAT" %}<A HREF=/patient_queue/?filter_visit_type=MAT>Maternity</A>{%else%}Maternity{%endifnotequal%}
+</DIV>
 <DIV STYLE="font-size: 1.2em; text-align: center;">
 <FORM ACTION="/select_date_for_patient_queue/" METHOD="POST">
 (
@@ -36,12 +43,12 @@
 {% if visits %}
 <DIV STYLE="font-size: 1.2em;">Active({{num_active}}):</DIV>
 <TABLE>
-<TR><TH>Seen</TH><TH>Patient Id</TH><TH>Type</TH><TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Actions</TH></TR>
+<TR><TH>Seen</TH><TH>Patient Id</TH>{% ifequal filter_visit_type None %}<TH>Type</TH>{%endifequal%}<TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Actions</TH></TR>
 {% for v in visits %}
 <TR>
 <TD>{{v.seenDateTime|date:"SHORT_DATETIME_FORMAT"}}</TD>
 <TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
-<TD>{{v.displayType}}</TD>
+{% ifequal filter_visit_type None %}<TD>{{v.displayType}}</TD>{%endifequal%}
 	{% ifequal v.status "MISS" %}
 		<TD STYLE='background-color:#FF5555;'>
 	{% else %} {% ifequal v.status "INPR" %}
@@ -105,11 +112,12 @@
 {% if r_visits %}
 <DIV STYLE="font-size: 1.2em;">Inactive({{num_inactive}}):</DIV>
 <TABLE>
-<TR><TH>Finished</TH><TH>Patient Id</TH><TH>Status</TH><TH>Finished By</TH><TH>Meds</TH><TH>Actions</TH></TR>
+<TR><TH>Finished</TH><TH>Patient Id</TH>{% ifequal filter_visit_type None %}<TH>Type</TH>{%endifequal%}<TH>Status</TH><TH>Finished By</TH><TH>Meds</TH><TH>Actions</TH></TR>
 {% for v in r_visits %}
 <TR>
 <TD>{{v.finishedDateTime|date:"SHORT_DATETIME_FORMAT"}}</TD>
 <TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
+{% ifequal filter_visit_type None %}<TD>{{v.displayType}}</TD>{%endifequal%}
 	{% ifequal v.status "MISS" %}
 		<TD STYLE='background-color:#FF5555;'>
 	{% else %} {% ifequal v.status "RESO" %}
